--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,49 @@
     <title>YouTube subscriber</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+  <style>
+    .navbar, .footerlink {
+    background-image: radial-gradient(circle, #c226c2 0%, #ece99a 100%);
+}
 
+div {
+    margin: 2%;
+}
+
+.navbar-brand{
+    height: 40px;
+}
+.capstone{
+    
+    margin-top: 0;
+    margin-left: 0rem;
+    color: rgb(77, 75, 75);
+}
+
+.logo{
+    height: 20px;
+    width: 20px;
+}
+
+a{
+    text-decoration: none;
+}
+
+em {
+    background-color: rgb(132, 127, 127);
+    color: white;
+    padding: 2px;
+    cursor: pointer;
+}
+
+
+em:hover {
+    background-image: radial-gradient(circle, #c226c2 0%, #ece99a 100%);
+    color: black;
+}
+
+
+    </style>
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
