--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@ em:hover {
     <!-- Copyright -->
     <div class="footerlink container-fluid text-center text-dark p-3">
         © 2023 Copyright:
-        <a class="text-dark"href="https://github.com/ehsaancode/">ehsaanCode</a>
+        <a class="text-dark"href="https://github.com/ehsaancode/">FarhanMohammed</a>
     </div>
 </footer>
 </body>
